# page-analyser

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: lint-check.yml
page_analyzer/: __init__.py  app.py  bs_util.py  db_manager.py  page_checker.py  utils.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
page_analyzer/templates/errors/: 500.html
page_analyzer/templates/includes/: footer.html  header.html  messages.html  nav.html
